--- a/css/youcommunik/public/css/style.css
+++ b/css/youcommunik/public/css/style.css
@@ -1,8 +1,12 @@
+#body{
+    width: 60%;
+    margin: auto;
+}
 .header{
     background-color:#1A1A1D;
-    height: 300px;
+    height: 120px;
     display: flex;
-    /* justify-content: space-between; */
+    
 }
 .bleugris{
     background-color:#334D5C ;
@@ -17,28 +21,92 @@
 .beige{
     background-color: #EAE3D6;
     position:relative;
-    height: 150px;
+    height: 160px;
 }
 .footer{
     background-color: #393A3B;
     bottom:0%;
     width: 100%;
-    height:200px;
-}
-/* .ul2{
-    width: 60%;
-    justify-content:flex-end;
-    border: red solid 1px
-    
-}
-.ul1{
-display: flex; */
-.ul2{
-    justify-content;
-    border: red solid 1px;
+    height:350px;
+    position:relative;
 }
 
-/* div{
-    display:flex;
-    position:absolute
- } */
+
+
+.ul1{
+    display: flex;
+    width: 100%;
+    justify-content:space-between;
+    height: 15px;
+    list-style-type: none;
+    position:relative
+
+    }
+.ul1>li{
+font-size: 12px;
+    }
+.ul1>li>a{
+    text-decoration: none;
+    color:#FFFFFF;
+}
+
+.div1{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    
+    
+}
+
+.ul2{
+    
+    display: flex;
+    width: 80%;
+    height:30%;
+    align-items:center;
+    position:relative;
+    right:2px;
+    margin-left: 20%;
+}
+.divicon{
+    height: 70%;
+    width: 75%;
+    align-items:flex-end;
+    justify-content: space-between;
+    display: flex;
+    margin-left: 24%;
+    
+}
+.ul1>li{
+    width:100px;
+    position:absolute;
+
+}
+.img1{
+    
+}
+.imgdiv{
+    margin-top: 13%;
+}
+.ul1>li:first-child{
+    left: 52px;
+}
+.ul1>li:nth-child(2){
+    
+    left:152px;
+    
+}
+.ul1>li:nth-child(3){
+    
+    left: 274px;
+}
+.ul1>li:nth-child(4){
+    left: 382px;
+}
+.ul1>li:nth-child(5){
+    left: 478px;
+}
+.ul1>li:nth-child(6){
+    left: 602px;
+}
