--- a/css/youcommunik/public/css/style.css
+++ b/css/youcommunik/public/css/style.css
@@ -1,6 +1,8 @@
 #body{
     width: 60%;
     margin: auto;
+    overflow: hidden;
+    box-shadow: 0px 0px 20px 20px rgba(0, 0, 0, 0.096);
 }
 .header{
     background-color:#1A1A1D;
@@ -17,18 +19,29 @@
 .blanc{
     background-color: #FFFFFF;
     position:relative;
-    height: 200px;
+    height: 500px;
 }
 .beige{
     background-color: #EAE3D6;
     position:relative;
-    height: 160px;
+    height: 300px;
 }
+#beige2{
+    background-color: #EAE3D6;
+    position:relative;
+    height: 450px;
+    
+}
+#beige2>div{
+align-items: center;
+display :flex;
+}
+
 .footer{
     background-color: #393A3B;
     bottom:0%;
     width: 100%;
-    height:350px;
+    height:400px;
     position:relative;
 }
 
@@ -66,7 +79,7 @@ font-size: 12px;
     width: 80%;
     height:30%;
     align-items:center;
-    position:relative;
+    /* position:relative; */
     right:2px;
     margin-left: 20%;
 }
@@ -135,4 +148,156 @@ font-size: 12px;
 }
 .limage{
     height: 80%;
+}
+.bla2{
+    display: flex;
+    width: 100%;
+    height: 60%;
+}
+.h1h1{
+    height: 40%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.h1bg{
+background-color:#334D5C ;
+width: 35%;
+height: 50%;
+display:flex;
+align-items: center;
+justify-content: center;
+
+}
+.h1bg>h1{
+    display: flex;
+    color:white;
+    font-size:60px;
+}
+.bla2>div:first-child{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bla2>div:last-child{
+    width: 60%;
+    display:flex;
+    flex-direction: column;
+}
+
+p{
+    font-size: 25px;
+}
+.beige>div{
+    display: flex;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+.beige>div>div>div>a>img{
+    /* transform:scale(0.50) */
+    height: 150px;
+    width: 150px;
+}
+.beige>div>div>div>a{
+    text-decoration: none;
+    color: black;
+}
+.beige>div>div>div:first-child{
+    height: 60%;
+    justify-content: center;
+    display: flex;
+}
+.beige>div>div>div:last-child{
+    height: 40%;
+}
+.pcenter{
+    display: flex;
+    justify-content: center;
+}
+.center>p{
+    max-width: max-content;
+}
+#beige2>div:first-child{
+    height: 50%;
+}
+#beige2>div:last-child{
+    height: 50%;
+}
+#beige2>.mediv>div>a>img{
+    transform:scale(0.50)
+}
+.mediv>.pcenter>a{
+    text-decoration: none;
+    color: black;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.bobo{
+    display: flex;
+    justify-content:center;
+}
+#beige2{
+    height: 600px;
+}
+
+.lastdiv{
+    height: 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.lastdiv>div>h3{
+    font-size: 25px;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+}
+.lastdiv2{
+    height: 70%;
+    display: flex;
+}
+.lastdiv2>div>a>img{
+    height: 70px;
+    width: 70px;
+}
+.lastdiv2>div>a{
+    height: 100px;
+    width: 100px;
+    align-items: center;
+}
+.lastdiv2>div{
+    /* justify-content: space-between; */
+    align-items: center;
+    display: flex;
+    justify-content:center;
+}
+.lastdiv2>div:first-child{
+    margin-left: 130px;
+}
+.lastdiv2>div:nth-child(2){
+    margin-left: 23px;
+}
+.lastdiv2>div:last-child{
+    margin-right: 28px;
+}
+.lastdiv2>div:first-child{
+    
+    width: 33%;
+}
+.lastdiv2>div:nth-child(2){ 
+    
+    width: 33%;
+}
+.lastdiv2>div:last-child{
+    
+    width: 33%;
+}
+p{
+    font-family: 'Ubuntu', sans-serif;
+}
+body{
+    font-family: 'Ubuntu', sans-serif;
 }
